--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>HTML Video Player</title>
     <link rel="stylesheet" href="style.css">
-    <script src="lib/jquery.js"></script>
 </head>
 <body>
 
@@ -23,6 +22,7 @@
     </div>
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
